--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".SplashScreen"
-            android:exported="false">
+            android:name=".SplashScreen">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
